# Neural-Hive-Mind

./: .coverage  .coveragerc  .dockerignore  .flake8  .gitignore  ANALISE_CODEBASE.md  ANALISE_DEBUG_GRPC_TYPEERROR.md  AWS_PERMISSIONS_GUIDE.md  CHANGELOG.md  CHECKLIST_GOVERNANCE_DEPLOYMENT.md  COMANDOS_SPECIALISTS.md  COMANDOS_UTEIS.md  CONCLUSAO_FASE2.md  CONTINUOUS_LEARNING_IMPLEMENTATION.md  CORRECAO_SERIALIZACAO_KAFKA.md  CORREÇÕES_IMPLEMENTADAS.md  DECISION_FRAMEWORK_PROTOBUF_FIX.md  DEPENDENCY_CLEANUP_SUMMARY.md  DEPENDENCY_VERSIONS.md  DEPLOYMENT_EKS_GUIDE.md  DEPLOYMENT_EKS_SUCCESS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_LOCAL.md  DEPLOYMENT_SESSION_SUMMARY.md  DEPLOYMENT_SPECIALISTS_FASE3.md  DIAGNOSTIC_PODS_CRASHLOOP.md  DIAGRAMA_FLUXO_SERIALIZACAO.md  EKS_DEPLOYMENT_CHECKLIST.md  EKS_DEPLOYMENT_FINAL_STATUS.md  EXECUTIVE_SUMMARY.md  FASE2_CONCLUSAO.md  FASTAPI_PYDANTIC_NORMALIZATION.md  FLUXO_B_REVALIDATION_20251121_095620.txt  GRPC_COMPREHENSIVE_TEST_RESULTS_TEMPLATE.md  GUIA_RAPIDO_FASE1.md  IMPLEMENTATION_SUMMARY.md  INDEX_DOCUMENTACAO.md  INDICE_ANALISE_DESERIALIZACAO.md  INDICE_TESTES.md  MCP_DEPLOYMENT_CHECKLIST.md  (+104 more)
.claude/: settings.local.json  settings.local.json.backup
.tmp/: jaeger-allinone-cassandra.yaml  jaeger-allinone-memory.yaml  observability-validation-report.txt  register_mock_model.py
base-images/: README.md  VERSIONS.md
docs/: ADICIONAR_WORKER_NODES.md  ANALISE_FLUXO_C.md  ANALISE_FLUXO_C_2026-02-03.md  ANALISE_PROFUNDA_PROBLEMAS_2026-02-12.md  API_DEPENDENCY_INJECTION_GUIDE.md  APROVACAO_MANUAL_PLANO_FLUXO_C.md  AVRO_MIGRATION_GUIDE.md  BUILD-FAILURE-REPORT.md  BUILD-STATUS.md  BUSINESS_METRICS_GUIDE.md  CHECKLIST_CONSENSUS_ENGINE.md  CI-CD_GITHUB_SETUP.md  CLUSTER_FIXES_2026-02-19.md  COMPLIANCE_AUDIT_GUIDE.md  COMPLIANCE_LAYER_GUIDE.md  CONTINUOUS_LEARNING_GUIDE.md  CORRECOES_APLICADAS_2026-01-30.md  CORRELATION_ID_PROPAGATION.md  DEPENDENCY_AUDIT.md  DEPENDENCY_MANAGEMENT.md  DEPENDENCY_OPTIMIZATION.md  DEPLOYMENT_GUIDE.md  DIAGNOSTICO_CNI_FLANNEL_2026-02-12.md  DIAGNOSTICO_PODS_FALHANDO_2026-02-10.md  DISTRIBUTED_TRACING_GUIDE.md  DOCKER_BUILD_BEST_PRACTICES.md  DOCKER_BUILD_PATTERNS.md  E2E_TEST_EXECUTION_PLAYBOOK.md  E2E_TEST_RESULTS_2026-02-07.md  E2E_TEST_RESULTS_TEMPLATE.md  EXECUCAO_APROVACAO_MANUAL_FLUXO_C_2026-02-03.md  FEATURE_ENGINEERING_RESULTS_2026-02-08.md  FEEDBACK_SERVICE.md  FIX_STE_KAFKA_CONSUMER_2026-01-16.md  FLUXO_COMPLETO_NEURAL_HIVE_MIND.md  FLUXO_C_ANALISE_DETALHADA.md  FLUXO_INTENCAO_A_C_ANALISE.md  GATEWAY_DEPLOYMENT_GUIDE.md  GATEWAY_ROUTING_DECISION_MATRIX.md  GATEWAY_THRESHOLD_TUNING_GUIDE.md  (+141 more)
examples/: ab_testing_specialist_example.py  ensemble_specialist_example.py  multi_tenant_specialist_example.py  slo-latency-example.yaml
k8s/: README.md  apicurio-registry-deployment.yaml  approval-service-deployment.yaml  auto-feedback-job.yaml  balanced-feedback-job.yaml  capabilities-fix-workaround.sh  kafka-local.yaml  (+26 more)
libraries/python/neural_hive_observability/: README.md  __init__.py  context.py  health.py  metrics.py  pyproject.toml  requirements.txt  setup.py  tracing.py
libraries/python/neural_hive_observability/neural_hive_observability/: __init__.py  config.py  context.py  exporters.py  grpc_instrumentation.py  health.py  kafka_instrumentation.py  logging.py  metrics.py  tracing.py
libraries/python/neural_hive_observability/neural_hive_observability.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
libraries/python/neural_hive_observability/neural_hive_observability/health_checks/: __init__.py  clickhouse.py  otel.py
libraries/python/neural_hive_observability/neural_hive_observability/templates/: README.md  grpc_example.py  kafka_example.py  service_health_template.py
libraries/python/neural_hive_observability/templates/: README.md
libraries/python/neural_hive_observability/tests/: README.md  test_context.py  test_exporters.py  test_grpc_instrumentation.py  test_kafka_instrumentation.py  test_observability.py
libraries/python/neural_hive_resilience/: __init__.py  pyproject.toml
libraries/python/neural_hive_resilience/neural_hive_resilience/: circuit_breaker.py
services/consensus-engine/: Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/consensus-engine/src/: main.py
services/consensus-engine/src/clients/: __init__.py  analyst_agent_grpc_client.py  mongodb_client.py  pheromone_client.py  queen_agent_grpc_client.py  specialists_grpc_client.py
services/consensus-engine/src/config/: settings.py
services/consensus-engine/src/consumers/: __init__.py  plan_consumer.py
services/consensus-engine/src/models/: __init__.py  consolidated_decision.py  pheromone_signal.py
services/consensus-engine/src/observability/: __init__.py  metrics.py
services/consensus-engine/src/producers/: __init__.py  decision_producer.py
services/consensus-engine/src/proto/: __init__.py  analyst_agent_pb2.py  analyst_agent_pb2_grpc.py  queen_agent_pb2_grpc.py
services/consensus-engine/src/services/: __init__.py  bayesian_aggregator.py  compliance_fallback.py  consensus_orchestrator.py  explainability_consolidator.py  voting_ensemble.py
services/consensus-engine/tests/: VALIDATION.md  __init__.py  conftest.py  test_compliance_fallback.py  test_consensus_orchestrator_correlation_id.py  test_decision_avro_serialization.py  test_decision_producer_correlation_id.py  test_plan_consumer_integration.py  test_plan_consumer_resilience.py  test_queen_agent_grpc_client.py  test_specialist_timeouts.py  test_specialists_grpc_client.py  test_specialists_grpc_client_timeouts.py
services/specialist-behavior/: Dockerfile  pyproject.toml  requirements.txt
services/specialist-behavior/src/: config.py  http_server_fastapi.py  main.py  specialist.py
services/specialist-business/: Dockerfile  pyproject.toml  requirements.txt
services/specialist-business/src/: config.py  http_server.py  http_server_fastapi.py  main.py  specialist.py
services/specialist-evolution/: Dockerfile  pyproject.toml
services/specialist-evolution/src/: config.py  http_server_fastapi.py  main.py  specialist.py
(+3573 files in other folders)
