[tool.poetry]
name = "consensus-engine"
version = "1.0.8"
description = "Consensus Engine para Neural Hive-Mind - Motor de consenso multi-agente"
authors = ["Neural Hive-Mind Team <team@neural-hive.com>"]
readme = "README.md"
packages = [{include = "src"}]

# NOTA: Este arquivo pyproject.toml é mantido para metadados do projeto.
# A FONTE DE VERDADE para dependências de produção é requirements.txt
# (usado pelos Dockerfiles). Mantenha este arquivo sincronizado com requirements.txt.

[tool.poetry.dependencies]
python = "^3.11"
neural-hive-specialists = "^1.0.8"
neural-hive-observability = "==1.1.0"

# Web Framework
fastapi = "==0.104.1"
uvicorn = {extras = ["standard"], version = "==0.24.0"}

# Data Validation
pydantic = "==2.5.3"
pydantic-settings = ">=2.1.0"
httpx = "==0.25.2"

# Kafka
confluent-kafka = "==2.3.0"
attrs = ">=23.1.0"
authlib = ">=1.3.0"
fastavro = ">=1.8.0"
cachetools = ">=5.3.0"

# gRPC
# gRPC - versão 1.75.1 obrigatória para compatibilidade com protobuf 5.x
grpcio = "==1.75.1"
grpcio-tools = "==1.75.1"
grpcio-health-checking = "==1.75.1"
protobuf = "==5.27.0"

# MongoDB
pymongo = ">=4.6.0"
motor = "==3.3.2"

# Redis
redis = {extras = ["hiredis"], version = "==5.0.1"}

# Scientific Computing
numpy = "==1.26.2"
scipy = ">=1.11.0"

# Logging
structlog = "==23.2.0"
python-json-logger = ">=2.0.7"

# OpenTelemetry
opentelemetry-api = ">=1.21.0"
opentelemetry-sdk = ">=1.21.0"
opentelemetry-exporter-otlp = ">=1.21.0"
opentelemetry-instrumentation-fastapi = ">=0.42b0"
opentelemetry-instrumentation-grpc = ">=0.42b0"

# Prometheus
prometheus-client = ">=0.19.0"

# Retry Logic
tenacity = ">=8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-mock = ">=3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
