[tool.poetry]
name = "consensus-engine"
version = "1.0.8"
description = "Consensus Engine para Neural Hive-Mind - Motor de consenso multi-agente"
authors = ["Neural Hive-Mind Team <team@neural-hive.com>"]
readme = "README.md"
packages = [{include = "src"}]

# NOTA: Este arquivo pyproject.toml é mantido para metadados do projeto.
# A FONTE DE VERDADE para dependências de produção é requirements.txt
# (usado pelos Dockerfiles). Mantenha este arquivo sincronizado com requirements.txt.

[tool.poetry.dependencies]
python = "^3.11"
neural-hive-specialists = "^1.0.8"
neural-hive-observability = "==1.1.0"

# Web Framework
fastapi = "==0.115.6"
uvicorn = {extras = ["standard"], version = "==0.34.0"}

# Data Validation
pydantic = "==2.10.4"
pydantic-settings = "==2.7.1"
httpx = "==0.28.1"

# Kafka
confluent-kafka = "==2.6.1"
attrs = ">=23.1.0"
authlib = ">=1.3.0"
fastavro = "==1.9.7"
cachetools = "==5.5.0"

# gRPC - versão consolidada para todo o projeto
grpcio = "==1.68.1"
grpcio-tools = "==1.68.1"
grpcio-health-checking = "==1.68.1"
protobuf = "==5.29.2"

# MongoDB
pymongo = "==4.10.1"
motor = "==3.7.1"

# Redis
redis = {extras = ["hiredis"], version = "==5.2.1"}

# Scientific Computing
numpy = "==1.26.4"
scipy = "==1.14.1"

# Logging
structlog = "==24.4.0"
python-json-logger = ">=2.0.7"

# OpenTelemetry
opentelemetry-api = "==1.29.0"
opentelemetry-sdk = "==1.29.0"
opentelemetry-exporter-otlp = "==1.29.0"
opentelemetry-instrumentation-fastapi = "==0.50b0"
opentelemetry-instrumentation-grpc = "==0.50b0"

# Prometheus
prometheus-client = "==0.21.1"

# Retry Logic
tenacity = "==9.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-mock = ">=3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
