[tool.poetry]
name = "specialist-business"
version = "1.0.8"
description = "Specialist Business para Neural Hive-Mind - Análise de processos de negócio e otimização"
authors = ["Neural Hive-Mind Team <team@neural-hive.com>"]
readme = "README.md"
packages = [{include = "src"}]

# NOTA: Este arquivo pyproject.toml é mantido para metadados do projeto.
# A FONTE DE VERDADE para dependências de produção é requirements.txt
# (usado pelos Dockerfiles). Mantenha este arquivo sincronizado com requirements.txt.

[tool.poetry.dependencies]
python = "^3.11"
neural-hive-specialists = "^1.0.8"

# HTTP server and client
fastapi = "==0.104.1"
uvicorn = {extras = ["standard"], version = "==0.24.0"}
requests = ">=2.31.0"
pydantic = "==2.5.3"
pydantic-settings = ">=2.1.0"

# Circuit breaker and resilience
tenacity = ">=8.2.3"
pybreaker = ">=1.0.1"

# Business-specific
pandas = "==2.1.3"
numpy = "==1.26.2"
scikit-learn = ">=1.5.0,<1.6.0"

# Logging
# Nota: Dependências de process mining (pm4py), time series forecasting (prophet, statsmodels),
# e optimization (pulp) foram removidas pois não são utilizadas pelos specialists.
# Estas dependências estão disponíveis no optimizer-agents onde são realmente necessárias.
structlog = "==23.2.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-mock = ">=3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
